--- a/index.html
+++ b/index.html
@@ -3,40 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Add Poppins font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- favicon -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="https://i.postimg.cc/bNbhh10K/stack-of-books.png"
     />
-
-    <!-- end favicon  -->
-
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-
     <title>PagePal - Share & Discover Books</title>
     <style>
-      /* Previous CSS remains the same */
+      /* Previous CSS remains unchanged */
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: "Poppins", sans-serif;
       }
-
       body {
         background-color: #f5f5f5;
       }
-
       nav {
         background-color: #2c3e50;
         padding: 1rem;
@@ -44,7 +34,6 @@
         position: sticky;
         top: 0;
       }
-
       .nav-container {
         max-width: 1200px;
         margin: 0 auto;
@@ -52,30 +41,25 @@
         justify-content: space-between;
         align-items: center;
       }
-
       .logo {
         font-size: 1.5rem;
         font-weight: bold;
       }
-
       .container {
         max-width: 1200px;
         margin: 2rem auto;
         padding: 0 1rem;
       }
-
       h1 {
         text-align: center;
         margin: 2rem 0;
         color: #2c3e50;
       }
-
       .book-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
       }
-
       .book-card {
         background: white;
         border-radius: 10px;
@@ -84,11 +68,9 @@
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease;
       }
-
       .book-card:hover {
         transform: translateY(-5px);
       }
-
       .book-image {
         width: 200px;
         height: 300px;
@@ -96,14 +78,12 @@
         margin: 0 auto 1rem;
         border-radius: 5px;
       }
-
       .btn-group {
         display: flex;
         justify-content: center;
         gap: 1rem;
         margin-top: 1rem;
       }
-
       .btn {
         padding: 0.5rem 1rem;
         border: none;
@@ -111,33 +91,27 @@
         cursor: pointer;
         transition: opacity 0.3s ease;
       }
-
       .btn-primary {
         background-color: #3498db;
         color: white;
       }
-
       .btn-secondary {
         background-color: #2ecc71;
         color: white;
       }
-
       .btn:disabled {
         background-color: #95a5a6;
         cursor: not-allowed;
         opacity: 0.7;
       }
-
       .btn:hover:not(:disabled) {
         opacity: 0.8;
       }
-
       @media (max-width: 768px) {
         .book-grid {
           grid-template-columns: repeat(2, 1fr);
         }
       }
-
       @media (max-width: 480px) {
         .book-grid {
           grid-template-columns: 1fr;
@@ -176,7 +150,7 @@
         <div class="book-card">
           <img
             src="https://ecx.images-amazon.com/images/I/51sn6HtsItL._SY344_BO1,204,203,200_.jpg"
-            alt="Book Cover"
+            alt="Principles of Power System by Mehta book cover"
             class="book-image"
           />
           <h3>Principles of Power System BY Mehta</h3>
@@ -195,12 +169,11 @@
           </div>
         </div>
 
-        <!-- Repeat for other 5 books -->
         <!-- Book Card 2 -->
         <div class="book-card">
           <img
             src="https://images-na.ssl-images-amazon.com/images/I/51uTYzZV2LL._SX218_BO1,204,203,200_QL40_.jpg"
-            alt="Book Cover"
+            alt="Power Systems Analysis by Hadi Saadat book cover"
             class="book-image"
           />
           <h3>Power Systems Analysis by Hadi Saadat</h3>
@@ -220,14 +193,13 @@
         </div>
 
         <!-- Book Card 3 -->
-
         <div class="book-card">
           <img
             src="https://pdfcoffee.com/img/electrical-machines-textbook-by-blthereja-pdf-free.jpg"
-            alt="Book Cover"
+            alt="Electrical Machines Textbook by B.L. Theraja book cover"
             class="book-image"
           />
-          <h3>Electrical Machines Textbook by B.L.thereja</h3>
+          <h3>Electrical Machines Textbook by B.L. Theraja</h3>
           <div class="btn-group">
             <button class="btn btn-primary" onclick="handleActivate(3)">
               Activate Link
@@ -242,12 +214,12 @@
             </button>
           </div>
         </div>
-        <!-- Book Card 4 -->
 
+        <!-- Book Card 4 -->
         <div class="book-card">
           <img
             src="https://hunt4pak.weebly.com/uploads/5/0/2/6/50261399/620140703_orig.png?277"
-            alt="Book Cover"
+            alt="Electric Machinery Fundamentals by Stephen J. Chapman book cover"
             class="book-image"
           />
           <h3>Electric Machinery Fundamentals by Stephen J. Chapman</h3>
@@ -265,15 +237,15 @@
             </button>
           </div>
         </div>
-        <!-- Book Card 5 -->
 
+        <!-- Book Card 5 -->
         <div class="book-card">
           <img
             src="https://prodimage.images-bn.com/pimages/9780123860019_p0_v1_s550x406.jpg"
-            alt="Book Cover"
+            alt="Electrical Engineering 101 by Darren Ashby book cover"
             class="book-image"
           />
-          <h3>Electrical Engineering 101" by Darren Ashby</h3>
+          <h3>Electrical Engineering 101 by Darren Ashby</h3>
           <div class="btn-group">
             <button class="btn btn-primary" onclick="handleActivate(5)">
               Activate Link
@@ -290,11 +262,10 @@
         </div>
 
         <!-- Book Card 6 -->
-
         <div class="book-card">
           <img
             src="https://img.ebook-hunter.org/img/Fundamentals%20of%20Electric%20Circuits%2C%206th%20Edition%20by%20Charles%20K.%20Alexander%20%26%26%20Matthew%20N.%20O.%20Sadiku.jpg"
-            alt="Book Cover"
+            alt="Fundamentals of Electric Circuits by Charles and Sadiku book cover"
             class="book-image"
           />
           <h3>Fundamentals of Electric Circuits by Charles and Sadiku</h3>
@@ -312,52 +283,57 @@
             </button>
           </div>
         </div>
-
-        <!-- Add 4 more cards following the same pattern -->
       </div>
     </div>
 
     <script>
       function handleActivate(bookId) {
-        const url1 = "https://www.yahoo.com";
-        const url2 = "https://www.yahoo.com";
+        const url1 =
+          "https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8";
         const activateBtn = event.target;
         const downloadBtn = document.getElementById(`downloadBtn-${bookId}`);
-        window.open(url1, "_blank");
-        // window.location.href = url2;
 
-        // Disable activate button
+        if (!downloadBtn) return; // Prevent errors if button not found
+
+        window.open(url1, "_blank");
         activateBtn.disabled = true;
 
-        // Enable download button after 15 seconds
-        setTimeout(() => {
-          downloadBtn.disabled = false;
-        }, 15000);
-
-        // Show timer
         let seconds = 15;
-        const originalText = activateBtn.textContent;
-
         const timerInterval = setInterval(() => {
           activateBtn.textContent = `Activated (${seconds}s)`;
           seconds--;
-
           if (seconds < 0) {
             clearInterval(timerInterval);
             activateBtn.textContent = "Link Activated!";
+            downloadBtn.disabled = false;
           }
         }, 1000);
       }
 
       function handleDownload(bookId) {
-        alert(`Downloading Book ${bookId}`);
-        const url1 = "https://www.yahoo.com";
-        const url2 = "https://www.yahoo.com";
+        // Define unique download links for each book
+        const downloadLinks = {
+          1: "https://rb.gy/qxfvev", // mehetha power system
+          2: "https://z-lib.gs/dl/1131491/f58181", // power systems analysis
 
-        window.open(url1, "_blank");
-        window.location.href = url2;
+          3: "https://drive.google.com/file/d/0B0S99rLBiyIJY2xqS0ZhdzlKWTA/edit?resourcekey=0-NpaBjBszTjzhveWQ0u-lLw", // electrical machines thereja
+          4: "https://drive.google.com/file/d/1nunYPcwJxblCyHRr3pEJCVSlyb_NIyXy/view", // electric machinery by chapman
+          5: "https://rb.gy/h0311a", // electrical engineering 101
+          6: "https://rb.gy/v7aago", // fundamentals of electric circuits by sadiku
+        };
 
-        // Add actual download logic here
+        const affiliateLink =
+          "https://www.effectiveratecpm.com/hvij5r94hs?key=79b26274f8d82dcf5b3b7550ab536757";
+
+        const downloadUrl = downloadLinks[bookId];
+        if (downloadUrl) {
+          window.open(affiliateLink, "_blank");
+          setTimeout(() => {
+            window.location.href = downloadUrl;
+          }, 300);
+        } else {
+          alert("Download link not available for this book!");
+        }
       }
     </script>
   </body>
