versin_3 add nav bar links

--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
         <div class="logo">PagePal</div>
         <div>
           <a
-            href="#"
+            href="https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8"
             style="color: white; text-decoration: none; margin-left: 1rem"
             >Home</a
           >
           <a
-            href="#"
+            href="https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8"
             style="color: white; text-decoration: none; margin-left: 1rem"
             >Browse</a
           >
           <a
-            href="#"
+            href="https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8"
             style="color: white; text-decoration: none; margin-left: 1rem"
             >Share</a
           >
