--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
         <div class="logo">PagePal</div>
         <div>
           <a
-            href="https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8"
+            href="https://www.profitableratecpm.com/zyzd58v9g5?key=32aba236dac45f05ce67d2a9b1793e75"
             style="color: white; text-decoration: none; margin-left: 1rem"
             >Home</a
           >
           <a
-            href="https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8"
+            href="https://www.profitableratecpm.com/zyzd58v9g5?key=32aba236dac45f05ce67d2a9b1793e75"
             style="color: white; text-decoration: none; margin-left: 1rem"
             >Browse</a
           >
           <a
-            href="https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8"
+            href="https://www.profitableratecpm.com/zyzd58v9g5?key=32aba236dac45f05ce67d2a9b1793e75"
             style="color: white; text-decoration: none; margin-left: 1rem"
             >Share</a
           >
@@ -289,7 +289,7 @@
     <script>
       function handleActivate(bookId) {
         const url1 =
-          "https://www.effectiveratecpm.com/js8id8pfy7?key=c905513269e6c26ba0906afd324939b8";
+          "https://www.profitableratecpm.com/i5wdbrph?key=e3746c04718a508d88cd4784c5b5c621";
         const activateBtn = event.target;
         const downloadBtn = document.getElementById(`downloadBtn-${bookId}`);
 
@@ -313,7 +313,7 @@
       function handleDownload(bookId) {
         // Define unique download links for each book
         const downloadLinks = {
-          1: "https://rb.gy/qxfvev", // mehetha power system
+          1: "https://raw.githubusercontent.com/manjunath5496/Electrical-Engineering-Study-Material/refs/heads/master/Principles-of-Power-Systems-by-VK-Mehta.pdf", // mehetha power system
           2: "https://z-lib.gs/dl/1131491/f58181", // power systems analysis
 
           3: "https://drive.google.com/file/d/0B0S99rLBiyIJY2xqS0ZhdzlKWTA/edit?resourcekey=0-NpaBjBszTjzhveWQ0u-lLw", // electrical machines thereja
@@ -323,7 +323,7 @@
         };
 
         const affiliateLink =
-          "https://www.effectiveratecpm.com/hvij5r94hs?key=79b26274f8d82dcf5b3b7550ab536757";
+          "https://www.profitableratecpm.com/i5wdbrph?key=e3746c04718a508d88cd4784c5b5c621";
 
         const downloadUrl = downloadLinks[bookId];
         if (downloadUrl) {
