links update books

--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
         // Define unique download links for each book
         const downloadLinks = {
           1: "https://raw.githubusercontent.com/manjunath5496/Electrical-Engineering-Study-Material/refs/heads/master/Principles-of-Power-Systems-by-VK-Mehta.pdf", // mehetha power system
-          2: "https://z-lib.gs/dl/1131491/f58181", // power systems analysis
+          2: "https://raw.githubusercontent.com/niazwazir/POWER_SYSTEM_ANALYSIS/refs/heads/main/Power%20System%20Analysis%20By%20Hadi%20Saadat_compressed.pdf", // power systems analysis
 
           3: "https://drive.google.com/file/d/0B0S99rLBiyIJY2xqS0ZhdzlKWTA/edit?resourcekey=0-NpaBjBszTjzhveWQ0u-lLw", // electrical machines thereja
           4: "https://drive.google.com/file/d/1nunYPcwJxblCyHRr3pEJCVSlyb_NIyXy/view", // electric machinery by chapman
-          5: "https://rb.gy/h0311a", // electrical engineering 101
-          6: "https://rb.gy/v7aago", // fundamentals of electric circuits by sadiku
+          5: "https://zlib.pub/book/electrical-engineering-101-687jtd6n0oa0", // electrical engineering 101
+          6: "https://drive.google.com/file/d/0B1qRCmHVK0QYX0wza2ZkenBWV0U/view?resourcekey=0-Gg_WGIj4HgoQaZjmoh3nAg", // fundamentals of electric circuits by sadiku
         };
 
         const affiliateLink =
